# Vic3ToHoI4

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILDING  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  Vic3ToHoI4-Installer.iss  Vic3ToHoI4.wsp  Vic3ToHoI4Tests.vcxproj  Vic3ToHoI4Tests.vcxproj.filters  Vic3ToHoI4lib.vcxproj  Vic3ToHoI4lib.vcxproj.filters  Vic3ToHoi4.sln  Vic3ToHoi4.vcxproj  Vic3ToHoi4.vcxproj.filters  build_vic3_to_hoi4.sh  sonar-project.properties
.NO_AI/: README.md
.github/: dependabot.yml
.github/workflows/: clang-format-check.yml  find_braces_mismatches.yml  fix_spelling.yml  linux_analysis.yml  linux_codeql-analysis.yml  linux_coverage.yml  publish_commit_id.yml  run_clang_tidy.yml  sonarcloud.yml  spelling.yml  windows_build_test_and_push.yml
data/: readme.txt  version.txt
data/blank_mod/: ReadMe.txt
data/blank_mod/common/: combat_tactics.txt
data/blank_mod/events/: AcePilots.txt  CapitulationEvents.txt  Converter_StaticNewsEvents.txt  Decisions_Events.txt  ElectionEvents.txt  GOT_Generic_Events.txt  Generic.txt  LAR_occupation.txt  LaR_espionage_operations.txt  MTG_NewsEvents.txt  MTG_generic.txt  NewsEvents.txt  NukeEvents.txt  PoliticalEvents.txt  ReconquestWarsEvents.txt  SEA_generic_events.txt  Special_Project_Events.txt  TestEvents.txt  WTT_NewsEvents.txt  WarJustification.txt  debug_events.txt  italian_unification_stories.txt  stability_events.txt
data/blank_mod/interface/: _converter_portraits.gfx  _leader_portraits_mod_generated.gfx
data/blank_mod/map/: adjacency_rules.txt
data/blank_mod/music/: alliedradio.txt  bba_songs.txt  bba_songs_bonus.txt  bftb_songs.txt  dod_songs.txt  got_songs.txt  lar_preorder_songs.txt  lar_songs.txt  mtg_songs.txt  ncns_songs.txt  pfot_songs.txt  sabatonsoundtrack.txt  sabatonsoundtrack_vol2.txt  taog_songs.txt
data/blank_mod/portraits/: 00_portraits.txt  998_scientist_portraits.txt
data/blank_mod/sound/: vo_conv.asset
data/blank_mod/tests/: test_conversion_generic.txt
data/configurables/: character_traits.txt  commander_traits.txt  convoy_config.txt  country_mappings.txt  culture_graphics.txt  division_templates.txt  flag_mapper_config.txt  generic_advisors.txt  ideology_mappings.txt  leader_type_mappings.txt  legacy_ship_types.txt  plane_designs.txt  province_mappings - 1.12.txt  province_mappings.txt  province_mappings_1_12.txt  province_mappings_1_8.txt  province_mappings_1_9.txt  province_terrains.txt  resource_mappings.txt  resources.txt  ship_types.txt  tank_designs.txt  task_force_templates.txt  tech_mappings.txt  unit_mappings.txt
data/configurables/stories/: generic.txt  italy_unification.txt  italy_unification_declare_italy_north.txt  italy_unification_declare_italy_south.txt  italy_unification_north.txt  italy_unification_south.txt
data/fronter/: configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  fronter-configuration.txt  fronter-options.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml
data/release_banners/: vic3tohoi4.thumbnail.psd
data/resources/images/: nat_ideas_template_canvas.psd  nat_ideas_template_frame.psd
data/test_files/configurables/: character_traits.txt  convoy_config.txt  culture_graphics.txt  division_templates.txt  flag_mapper_config.txt  generic_advisors.txt  ideology_mappings.txt  leader_type_mappings.txt  legacy_ship_types.txt  mod_province_mappings.txt  plane_designs.txt  province_mappings.txt  province_terrains.txt  resource_mappings.txt  ship_types.txt  tank_designs.txt  task_force_templates.txt  tech_mappings.txt
data/test_files/configuration/: bad_hoi4_directory.txt  bad_vic3_directory.txt  blank_configuration.txt  missing_hoi4_directory.txt  missing_vic3_directory.txt  output_name_from_save_configuration.txt  output_name_override.txt  test_configuration.txt
docs/: release_checklist.txt  style_guide.txt
enc_temp_folder/3df670c3f4ec851fa63656c15095f3e6/: world_mapper_builder.cpp
enc_temp_folder/ff4457d73d124978876c833d960aff2/: province_mapper_importer.cpp
src/: main.cpp  vic3_to_hoi4_converter.cpp  vic3_to_hoi4_converter.h
src/configuration/: configuration.h  configuration_importer.cpp  configuration_importer.h  configuration_importer_tests.cpp
src/hoi4_world/characters/: hoi4_character.h  hoi4_character_converter.cpp  hoi4_character_converter.h  hoi4_character_converter_tests.cpp  hoi4_character_tests.cpp  hoi4_characters_converter.cpp  hoi4_characters_converter.h  hoi4_characters_converter_tests.cpp
src/hoi4_world/countries/: country.cpp  country.h  country_tests.cpp  hoi4_countries_converter.cpp  hoi4_countries_converter.h  hoi4_countries_converter_tests.cpp  hoi4_country.cpp  hoi4_country.h  hoi4_country_converter.cpp  hoi4_country_converter.h  hoi4_country_converter_tests.cpp  hoi4_country_converter_tests_tech.cpp  hoi4_country_tests.cpp  tag_alias.h
src/hoi4_world/decisions/: decision.cpp  decision.h  decision_importer.cpp  decision_importer.h  decision_importer_tests.cpp  decision_tests.cpp  decisions.cpp  (+6 more)
src/maps/: map_data.cpp  map_data.h  map_data_importer.cpp  map_data_importer.h  map_data_tests.cpp  point.h  province_definitions.cpp  province_definitions.h  province_definitions_tests.cpp  province_points.cpp  province_points.h  province_points_tests.cpp  utility.cpp  utility.h  utility_tests.cpp
src/out_hoi4/: out_mod.cpp  out_mod.h  out_mod_test.cpp
src/support/: converter_utils.cpp  converter_utils.h  date_fmt.h  named_type.h  polymorphic_equality.h  progress_manager.cpp  progress_manager.h  pseduo_random_order.cpp  pseduo_random_order.h  pseduo_random_order_tests.cpp
tools/: build_fronter.sh  build_vic3_to_hoi4.sh  generate_coverage_report.sh  generate_test_save.sh  image_modifier.py  province_mappings_generator.py  run_clang_tidy.sh  run_linux_tests.sh  save_commit_id.bat
tools/resource_distributor/: CMakeLists.txt  CMakePresets.json  main.cpp
(+2191 files in other folders)
